--- a/MPfm/branches/current/MPfm.Mac/Windows/XIB/MainWindow.xib
+++ b/MPfm/branches/current/MPfm.Mac/Windows/XIB/MainWindow.xib
@@ -1638,6 +1638,9 @@
 																						<object class="NSTableView" id="60825551">
 																							<reference key="NSNextResponder" ref="497439405"/>
 																							<int key="NSvFlags">256</int>
+																							<object class="NSMutableArray" key="NSSubviews">
+																								<bool key="EncodedWithXMLCoder">YES</bool>
+																							</object>
 																							<string key="NSFrameSize">{400, 155}</string>
 																							<reference key="NSSuperview" ref="497439405"/>
 																							<reference key="NSWindow"/>
@@ -2077,6 +2080,9 @@
 																						<object class="NSTableView" id="77805709">
 																							<reference key="NSNextResponder" ref="36467682"/>
 																							<int key="NSvFlags">256</int>
+																							<object class="NSMutableArray" key="NSSubviews">
+																								<bool key="EncodedWithXMLCoder">YES</bool>
+																							</object>
 																							<string key="NSFrameSize">{375, 153}</string>
 																							<reference key="NSSuperview" ref="36467682"/>
 																							<reference key="NSWindow"/>
@@ -3862,7 +3868,7 @@
 								<object class="NSTextField" id="598097815">
 									<reference key="NSNextResponder" ref="644419052"/>
 									<int key="NSvFlags">266</int>
-									<string key="NSFrameSize">{183, 17}</string>
+									<string key="NSFrameSize">{107, 17}</string>
 									<reference key="NSSuperview" ref="644419052"/>
 									<string key="NSAntiCompressionPriority">{250, 750}</string>
 									<bool key="NSEnabled">YES</bool>
@@ -3878,7 +3884,7 @@
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 								</object>
 							</object>
-							<string key="NSFrame">{{252, 1}, {183, 17}}</string>
+							<string key="NSFrame">{{291, 1}, {107, 17}}</string>
 							<reference key="NSNextKeyView" ref="598097815"/>
 						</object>
 						<reference key="destination" ref="598097815"/>
@@ -3896,7 +3902,7 @@
 								<object class="NSTextField" id="242770911">
 									<reference key="NSNextResponder" ref="49724372"/>
 									<int key="NSvFlags">266</int>
-									<string key="NSFrameSize">{50, 17}</string>
+									<string key="NSFrameSize">{89, 17}</string>
 									<reference key="NSSuperview" ref="49724372"/>
 									<string key="NSAntiCompressionPriority">{250, 750}</string>
 									<bool key="NSEnabled">YES</bool>
@@ -3912,7 +3918,7 @@
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 								</object>
 							</object>
-							<string key="NSFrame">{{199, 1}, {50, 17}}</string>
+							<string key="NSFrame">{{199, 1}, {89, 17}}</string>
 							<reference key="NSNextKeyView" ref="242770911"/>
 						</object>
 						<reference key="destination" ref="242770911"/>
@@ -3965,7 +3971,7 @@
 								<object class="NSTextField" id="642368185">
 									<reference key="NSNextResponder" ref="623050336"/>
 									<int key="NSvFlags">266</int>
-									<string key="NSFrameSize">{50, 17}</string>
+									<string key="NSFrameSize">{75, 17}</string>
 									<reference key="NSSuperview" ref="623050336"/>
 									<string key="NSAntiCompressionPriority">{250, 750}</string>
 									<bool key="NSEnabled">YES</bool>
@@ -3981,7 +3987,7 @@
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 								</object>
 							</object>
-							<string key="NSFrame">{{121, 1}, {50, 17}}</string>
+							<string key="NSFrame">{{121, 1}, {75, 17}}</string>
 							<reference key="NSNextKeyView" ref="642368185"/>
 						</object>
 						<reference key="destination" ref="642368185"/>
@@ -3999,7 +4005,7 @@
 								<object class="NSTextField" id="238565072">
 									<reference key="NSNextResponder" ref="921255713"/>
 									<int key="NSvFlags">266</int>
-									<string key="NSFrameSize">{50, 17}</string>
+									<string key="NSFrameSize">{174, 17}</string>
 									<reference key="NSSuperview" ref="921255713"/>
 									<string key="NSAntiCompressionPriority">{250, 750}</string>
 									<bool key="NSEnabled">YES</bool>
@@ -4015,7 +4021,7 @@
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 								</object>
 							</object>
-							<string key="NSFrame">{{199, 1}, {50, 17}}</string>
+							<string key="NSFrame">{{199, 1}, {174, 17}}</string>
 							<reference key="NSNextKeyView" ref="238565072"/>
 						</object>
 						<reference key="destination" ref="238565072"/>
@@ -4275,6 +4281,39 @@
 						<reference key="destination" ref="895187609"/>
 					</object>
 					<int key="connectionID">708</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">textField</string>
+						<object class="NSTableCellView" key="source" id="841670270">
+							<nil key="NSNextResponder"/>
+							<int key="NSvFlags">274</int>
+							<object class="NSMutableArray" key="NSSubviews">
+								<bool key="EncodedWithXMLCoder">YES</bool>
+								<object class="NSTextField" id="863571886">
+									<reference key="NSNextResponder" ref="841670270"/>
+									<int key="NSvFlags">266</int>
+									<string key="NSFrameSize">{22, 17}</string>
+									<reference key="NSSuperview" ref="841670270"/>
+									<string key="NSAntiCompressionPriority">{250, 750}</string>
+									<bool key="NSEnabled">YES</bool>
+									<object class="NSTextFieldCell" key="NSCell" id="617984505">
+										<int key="NSCellFlags">67108928</int>
+										<int key="NSCellFlags2">272631808</int>
+										<string key="NSContents">Table View Cell</string>
+										<reference key="NSSupport" ref="225404180"/>
+										<reference key="NSControlView" ref="863571886"/>
+										<reference key="NSBackgroundColor" ref="429694360"/>
+										<reference key="NSTextColor" ref="874080148"/>
+									</object>
+									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
+								</object>
+							</object>
+							<string key="NSFrame">{{1, 1}, {22, 17}}</string>
+						</object>
+						<reference key="destination" ref="863571886"/>
+					</object>
+					<int key="connectionID">712</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -5195,6 +5234,7 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="639026380"/>
+							<reference ref="841670270"/>
 						</object>
 						<reference key="parent" ref="60825551"/>
 					</object>
@@ -6046,6 +6086,29 @@
 						<reference key="object" ref="94409420"/>
 						<reference key="parent" ref="895187609"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">709</int>
+						<reference key="object" ref="841670270"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="863571886"/>
+						</object>
+						<reference key="parent" ref="1016525191"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">710</int>
+						<reference key="object" ref="863571886"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="617984505"/>
+						</object>
+						<reference key="parent" ref="841670270"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">711</int>
+						<reference key="object" ref="617984505"/>
+						<reference key="parent" ref="863571886"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -6145,10 +6208,12 @@
 					<string>289.IBPluginDependency</string>
 					<string>29.IBPluginDependency</string>
 					<string>290.IBPluginDependency</string>
+					<string>290.ibExternalAutomaticallyCalculatesRowSizeFromViewHeight</string>
 					<string>291.IBPluginDependency</string>
 					<string>292.IBPluginDependency</string>
 					<string>293.IBPluginDependency</string>
 					<string>294.IBPluginDependency</string>
+					<string>294.isInViewBasedMode</string>
 					<string>294.prototypeCellViews</string>
 					<string>297.IBPluginDependency</string>
 					<string>298.IBPluginDependency</string>
@@ -6170,20 +6235,25 @@
 					<string>320.IBPluginDependency</string>
 					<string>321.IBPluginDependency</string>
 					<string>323.IBPluginDependency</string>
+					<string>323.isInViewBasedMode</string>
 					<string>323.prototypeCellViews</string>
 					<string>324.IBPluginDependency</string>
 					<string>325.IBPluginDependency</string>
 					<string>326.IBPluginDependency</string>
 					<string>327.IBPluginDependency</string>
 					<string>329.IBPluginDependency</string>
+					<string>329.isInViewBasedMode</string>
 					<string>329.prototypeCellViews</string>
 					<string>330.IBPluginDependency</string>
 					<string>331.IBPluginDependency</string>
 					<string>332.IBPluginDependency</string>
 					<string>333.IBPluginDependency</string>
 					<string>335.IBPluginDependency</string>
+					<string>335.isInViewBasedMode</string>
+					<string>335.prototypeCellViews</string>
 					<string>336.IBPluginDependency</string>
 					<string>337.IBPluginDependency</string>
+					<string>337.isInViewBasedMode</string>
 					<string>337.prototypeCellViews</string>
 					<string>338.IBPluginDependency</string>
 					<string>339.IBPluginDependency</string>
@@ -6199,11 +6269,15 @@
 					<string>391.IBPluginDependency</string>
 					<string>392.IBPluginDependency</string>
 					<string>393.IBPluginDependency</string>
+					<string>393.ibExternalAutomaticallyCalculatesRowSizeFromViewHeight</string>
 					<string>394.IBPluginDependency</string>
+					<string>394.isInViewBasedMode</string>
 					<string>394.prototypeCellViews</string>
 					<string>397.IBPluginDependency</string>
+					<string>397.isInViewBasedMode</string>
 					<string>397.prototypeCellViews</string>
 					<string>398.IBPluginDependency</string>
+					<string>398.isInViewBasedMode</string>
 					<string>398.prototypeCellViews</string>
 					<string>399.IBPluginDependency</string>
 					<string>400.IBPluginDependency</string>
@@ -6323,7 +6397,10 @@
 					<string>705.userInterfaceItemIdentifier</string>
 					<string>706.IBPluginDependency</string>
 					<string>707.IBPluginDependency</string>
+					<string>709.IBPluginDependency</string>
 					<string>71.IBPluginDependency</string>
+					<string>710.IBPluginDependency</string>
+					<string>711.IBPluginDependency</string>
 					<string>73.IBPluginDependency</string>
 					<string>73.designableToolbarItemIdentifier</string>
 					<string>74.IBPluginDependency</string>
@@ -6467,10 +6544,12 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<boolean value="YES"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<boolean value="YES"/>
 					<object class="NSArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<reference ref="619687734"/>
@@ -6495,6 +6574,7 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<boolean value="YES"/>
 					<object class="NSArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<reference ref="194730826"/>
@@ -6504,6 +6584,7 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<boolean value="YES"/>
 					<object class="NSArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<reference ref="644419052"/>
@@ -6513,8 +6594,14 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<boolean value="YES"/>
+					<object class="NSArray">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<reference ref="841670270"/>
+					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<boolean value="YES"/>
 					<object class="NSArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<reference ref="49724372"/>
@@ -6533,17 +6620,21 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<boolean value="YES"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<boolean value="YES"/>
 					<object class="NSArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<reference ref="921255713"/>
 					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<boolean value="YES"/>
 					<object class="NSArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<reference ref="623050336"/>
 					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<boolean value="YES"/>
 					<object class="NSArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<reference ref="976484741"/>
@@ -6672,6 +6763,9 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>toolbarPlay</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>toolbarStop</string>
@@ -6711,7 +6805,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">708</int>
+			<int key="maxID">712</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -7436,6 +7530,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/MainWindowController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSTableRowView</string>
+					<string key="superclassName">NSView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NSTableRowView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
